--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -28,44 +28,61 @@
     <table class="table">
       <thead>
         <tr>
-          <th class="text-center">Titulo</th>
-          <th class="text-center">Prioridad</th>
-          <th class="text-center">Usuario</th>
-          <th class="text-center">Status</th>
-          <th class="text-center">Localidad</th>          
-          <th class="text-center">Fecha de inicio</th>
-          <th class="text-center">Dias que dura el evento</th>
-          <th class="text-center">Elige</th>
+          <th style="text-align: center"><h4 style="color:blue">Titulo</h4> </th>
+          <th style="text-align: center"> <h4 style="color:blue">Usuario</h4> </th>
+          <th style="text-align: center"><h4 style="color:blue">Localidad</h4> </th>
+          <th style="text-align: center"><h4 style="color:blue">Duracion</h4> </th>
+          <th style="text-align: center">
+          <a href=/categories?key=Prioridad-Up>
+          <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+          <h4 style="color:blue">Prioridad</h4>
+          <a href=/categories?key=Prioridad-Down>
+          <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a></th>
+          
+          <th style="text-align: center">
+          <a href=/categories?key=FechadeInicio-Up>
+          <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+          <h4 style="color:blue">Fecha de inicio</h4>
+          <a href=/categories?key=FechadeInicio-Down>
+          <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a></th>
+          <th style="text-align: center">
+          <a href=/categories?key=Status-Up>
+          <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+          <h4 style="color:blue">Status</h4>
+          <a href=/categories?key=Status-Down>
+          <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a></th>
         </tr>
       </thead>
       <tbody>
       <% @categories.each do |category| %>
         <tr>
-          <td>
+
+          <td class="text-center">
             <%= category.title %>
           </td>
-          <td>
+           <td class="text-center">
+            <%= category.user.name %>
+          </td>         
+          <td class="text-center">
+            <%= category.location %>
+          </td>
+          <td class="text-center">
+            <%= category.duration %>
+          </td>
+          <td class="text-center">
             <%= category.priority %>
           </td>
-          <td>
-            <%= category.user.name %>
+          <td class="text-center">
+            <%= category.start_date %>
           </td>
-          <td>
+          <td class="text-center">
             <% if category.status == true %>
               <p>Activa</p>
             <% else %>
               <p>Inactiva</p>  
             <% end %>  
           </td>
-          <td>
-            <%= category.location %>
-          </td>
-          <td>
-            <%= category.start_date %>
-          </td>
-          <td class="text-center">
-            <%= category.duration %>
-          </td>
+
           <td class="text-right">
             <%= link_to 'Show', category_path(category), class: 'btn btn-info' %>
             <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-warning' %>
@@ -96,6 +113,7 @@
       <thead>
         <tr>
           <th class="text-center">Titulo</th>
+          <th class="text-center">Categoría</th>
           <th class="text-center">Localidad</th>          
           <th class="text-center">Fecha de inicio</th>
           <th class="text-center">Dias que dura el evento</th>
@@ -108,6 +126,9 @@
         <tr>
           <td class="text-center">
             <%= category.title %>
+          </td>
+          <td class="text-center">
+            <%= category.category_type %>
           </td>
           <td class="text-center">
             <%= category.location %>
@@ -135,3 +156,4 @@
 </body>
 
 </html>
+
