--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,15 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Iniciar sesión", new_session_path(resource_name) %><br />
+<br />
+  <%= link_to "Iniciar sesión", new_session_path(resource_name), class: "btn btn-primary" %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Registrarse", new_registration_path(resource_name) %><br />
+<br />
+  <%= link_to "Registrarse", new_registration_path(resource_name), class: "btn btn-primary" %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Olvidé mi contrasaña", new_password_path(resource_name) %><br />
+  <%= link_to "Olvidé mi contrasaña", new_password_path(resource_name), class: "btn btn-danger " %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
