--- a/app/views/welcome/index3.html.erb
+++ b/app/views/welcome/index3.html.erb
@@ -189,42 +189,42 @@
         <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
           <div class="carousel-inner">
             <div class="item active">
+                   
                    <% @categories_evento.first(3).each do |e|%>
+                       <% if user_signed_in? %>
+                         <% @mylink = "/categories/" + e.id.to_s %>
+                       <% else %>
+                         <% @mylink = "/categories1/" + e.id.to_s %>
+                       <% end %><!-- cierre de if -->
+
                       <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
                           </a>
                       </div>
-                    <% end %>  
+                  <% end %>    
                     
               </div><!-- cierre de item-active -->
-
-            <% for i in 3..@categories_evento.length-1 do %>
-              <% if i % 3 == 0  %>
-              <div class="item">
-              <%= "i:#{i}" %>
-              <% @aux = i %>
-              <% @aux2 = @aux + 2 %>
-
-              <% if @aux2 > @categories_evento.length-1 %>
-                <% @aux2 = @categories_evento.length %>
-              <% end %>  
-              <%= "aux2:#{@aux2}, aux:#{@aux}" %>
-                <% @categories_evento[@aux..@aux2].each do |e|%>    
-                  <div class="col-sm-4">
-                      <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-                        <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
-                      </a>
-                  </div>
-                <% end %> 
-
-                   
-              </div>
-            <% end %>   
-            <% end %>  
+              
+                      <div class="item">
+              <% @categories_evento.slice(3..5) do |e|%>    
+                       <% if user_signed_in? %>
+                         <% @mylink = "/categories/" + e.id.to_s %>
+                       <% else %>
+                         <% @mylink = "/categories1/" + e.id.to_s %>
+                       <% end %><!-- cierre de if -->
+                
+                        <div class="col-sm-4">
+                          <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
+                           <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
+                          </a>
+                        </div>
+              <% end %>
+                      </div>                       
 
 
-        </div><!-- cierre de carousel-inner -->
+
+            </div><!-- cierre de carousel-inner -->
 
 
 
@@ -248,22 +248,17 @@
           <div class="carousel-inner">
             <div class="item active">
                    
-                      <div class="col-sm-3">
+                      <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag("bombillo.png", :class => "img-responsive") %>
                           </a>
                       </div>
-                       <div class="col-sm-3">
+                       <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag("bombillo.png", :class => "img-responsive") %>
                           </a>
                       </div>
-                      <div class="col-sm-3">
-                          <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-                          <%= image_tag("bombillo.png", :class => "img-responsive") %>
-                          </a>
-                      </div>
-                      <div class="col-sm-3">
+                      <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag("bombillo.png", :class => "img-responsive") %>
                           </a>
@@ -273,27 +268,21 @@
 
               <div class="item">
                    
-                      <div class="col-sm-3">
+                      <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag("bombillo.png", :class => "img-responsive") %>
                           </a>
                       </div>
-                       <div class="col-sm-3">
+                       <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag("bombillo.png", :class => "img-responsive") %>
                           </a>
                       </div>
-                      <div class="col-sm-3">
+                      <div class="col-sm-4">
                           <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
                           <%= image_tag("bombillo.png", :class => "img-responsive") %>
                           </a>
                       </div>
-                      <div class="col-sm-3">
-                          <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
-                          <%= image_tag("bombillo.png", :class => "img-responsive") %>
-                          </a>
-                      </div>
-                   
               </div>
 
               <div class="item ">
